# autobasedoc

./: .coverage  .gitignore  AGENTS.md  README.md  coverage.xml  final_error_check.py  pyproject.toml  run_tests.py  setup.py  test_fixes.py  test_original_frames.py  tox.ini  update_coverage.sh
.github/workflows/: tests.yml
autobasedoc/: autorpt.py
tests/: example.py  example_pi.py  example_px_image.py  test_autoplot.py  test_autoreport.py
