[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobasedoc"
version = "1.1.11"
description = "autobasedoc - convenience reportlab tool"
readme = "README.md"
authors = [
    {name = "Oliver Braun, Johannes Eckstein", email = "johannes.eckstein@nucos.de"}
]
license = "BSD-3-Clause"
requires-python = ">=3.7"
keywords = ["reporting"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6"
]
dependencies = [
    "reportlab",
    "pdfrw",
    "svglib", 
    "cycler", 
    "matplotlib>=3.5",
    "img2pdf"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "faker",
    "numpy"
]

[tool.pytest.ini_options]
testpaths = ["tests", "test_fixes.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["autobasedoc"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 1

[tool.coverage.html]
directory = "htmlcov"
